# research

./: .bazelrc  .gitignore  .pre-commit-config.yaml  CODEOWNERS  MODULE.bazel  README.md
.github/: README.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  feature_request.yaml
docs/: README  README.md  pull_request_template.md
learning/: BUILD  README.txt  defs.bzl  requirements_tpu.in  requirements_tpu_lock.txt
learning/core/: BUILD  config.py  main.py  mixin.py  train.py
learning/data/: BUILD  cifar.py  datamodule.py  preprocess.py  test_cifar.py  test_preprocess.py
learning/generative/: config.py  meanflow.py  test_meanflow.py
learning/generative/model/: test_refinenet.py
learning/utilities/: BUILD  logging.py  rank_zero.py
src/: README.txt  requirements.in  requirements_cuda_lock.txt  requirements_lock.txt
src/core/: BUILD  config.py  datamodule.py  distributed.py  evaluate.py  main.py  mixin.py  model.py  train.py  train_state.py
src/data/: BUILD  cifar.py  datamodule.py  huggingface.py  mnist.py  preprocess.py  test_cifar.py  test_huggingface.py  test_mnist.py  test_preprocess.py
src/generative/: BUILD  meanflow.py
src/generative/model/: refinenet.py
src/nn/: BUILD  mlp.py
src/projects/: README.txt
src/projects/generative/: BUILD  config.py  ddpm.py  experiment.py  main.py  meanflow.py
src/projects/generative/experimental/: BUILD  main.py  run_ua_flow.py
src/projects/generative/model/: BUILD  dit.py  inception.py  refinenet.py  test_dit.py  test_inception.py  test_refinenet.py  test_unet.py  unet.py
src/projects/generative/pipeline/: BUILD  augment.py  test_augment.py
src/projects/jtrp/: README.md
src/projects/rl/: BUILD  MlpNetwork.py  README.md  ReplayBuffer.py  common.py  config.py  dqn.py  dqn_model_params.msgpack  main.py  main_dqn.py  main_ppo.py  policy.py  ppo.py  readme.md  replay_buffer.py  run_ac.py  run_dqn.py  run_ppo.py  run_ppo_cartpole.py  structure.py  test.py  train.py
src/utilities/: BUILD  logging.py  rank_zero.py  training.py  visualization.py
(+27 files in other folders)
