"""Bazel module definition for the research project."""
module(
    name = "research",
    version = "0.1.0",
)

# load external dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "rules_dotnet", version = "0.19.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.6.3")

# support for c-sharp development through microsoft dotnet
register_toolchains("@dotnet_toolchains//:all")
dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.200")
use_repo(dotnet, "dotnet_toolchains")

# support for python development through `rules_python`
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(
    # The environment variable takes precedence if set.
    python_version = "3.10",
    python_version_env = "BAZEL_PYTHON_VERSION",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.9",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.10",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)
use_repo(
    python,
    "pythons_hub",
    python = "python_versions",
)

## adds set of pip repository
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "learning_cpu_3_10",
    python_version = "3.10",
    requirements_lock = "//learning:requirements_lock.txt",
)
pip.parse(
    hub_name = "learning_cuda_3_10",
    python_version = "3.10",
    requirements_lock = "//learning:requirements_cuda_lock.txt",
)
pip.parse(
    hub_name = "learning_tpu_3_10",
    python_version = "3.10",
    requirements_lock = "//learning:requirements_tpu_lock.txt",
)
use_repo(
    pip,
    learning_cpu_3_10 = "learning_cpu_3_10",
    learning_cuda_3_10 = "learning_cuda_3_10",
    learning_tpu_3_10 = "learning_tpu_3_10",
)
